# PopupReferencer

./: .gitattributes  .gitignore  CMakeLists.txt  icon.xcf  lrelease.rb  lupdate.rb  readme.md  resources.qrc  resources.rc
3rd party notices/: Qt dependencies.txt  nlohmann JSON for modern C++.txt
langs/: catalogue.csv  chinese_simplified.ts  chinese_traditional.ts  english.ts
src/: ConfigMng.cpp  ConfigMng.hpp  Main.cpp
src/graphics_scene/: AdvanceScene.cpp  AdvanceScene.hpp  SimpleScene.cpp  SimpleScene.hpp
src/styles/: master.css
src/window/: About.cpp  About.hpp  About.ui  AdvPopup.cpp  AdvPopup.hpp  BasicPopup.hpp  GridCreator.cpp  GridCreator.hpp  GridCreator.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Popup.cpp  Popup.hpp  Popup.ui  Settings.cpp  Settings.hpp  Settings.ui
styles/: master.css  master.qss  settings.qss
